style(evidence-toolkit): improve the code style